--- a/.github/workflows/.action.yml
+++ b/.github/workflows/.action.yml
@@ -1,33 +1,27 @@
-name: cd
+# name: cd
 
-on: [push]
+# on: [push]
 
-jobs:
-  cd:
-    runs-on: ${{ matrix.os }}
+# jobs:
+#   cd:
+#     runs-on: ${{ matrix.os }}
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: [14]
+#     strategy:
+#       matrix:
+#         os: [ubuntu-latest]
+#         node: [14]
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@master
 
-      - name: Setup node env
-        uses: actions/setup-node@v2.1.2
-        with:
-          node-version: ${{ matrix.node }}
+#       - name: Setup node env
+#         uses: actions/setup-node@v2.1.2
+#         with:
+#           node-version: ${{ matrix.node }}
 
-      - name: Install dependencies
-        run: yarn
+#       - name: Install dependencies
+#         run: yarn
 
-      - name: Generate
-        run: yarn build
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./.output
+#       - name: Generate
+#         run: yarn build
